# GPU4HopHL_code

./: .gitignore  .gitmodules  README.md
CPU_HopHL/: CMakeLists.txt  Readme.md  test.cpp
CPU_HopHL/.cache/clangd/index/: CT.h.A02F31DADCDB1900.idx  CT_labels.h.C4D25D725EC2A867.idx  PLL.h.F971662942E59C19.idx  ThreadPool.h.31B3DF113D100F58.idx  binary_save_read_vector_of_vectors.h.7F6E05B8D6DA7DA7.idx  graph_v_of_v.h.00FC41A5CA5DDB9A.idx  graph_v_of_v_generate_random_graph.h.0257AB2413BE5830.idx  graph_v_of_v_hop_constrained_shortest_distance.h.5C736A90E72534F9.idx  graph_v_of_v_shortest_paths.h.BA4373B91F524E28.idx  graph_v_of_v_update_vertexIDs_by_degrees_large_to_small.h.AC4C145C8614566C.idx  hop_constrained_two_hop_labels.h.69F93A9D1BA3D69E.idx  hop_constrained_two_hop_labels_generation.h.7CC0CB647007665E.idx  parse_string.h.2C88B9591284B26F.idx  print_items.h.378A7B8355BA4D63.idx  sorted_vector_binary_operations.h.DF61D0FED80EF32E.idx  test.cpp.F58FE10474CE7453.idx  test.h.981856B14C1858D1.idx  two_hop_labels.h.DBC88A9001E810E7.idx
CPU_HopHL/Group4HBPLL/: hop_constrained_two_hop_labels.h  test.cpp
CPU_HopHL/include/: hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h  test.h
CPU_HopHL/include/HBPLL/: PLL.h  hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h  test.h
CPU_HopHL/include/Hop/: graph_v_of_v_idealID_HB_canonical_repair.h  graph_v_of_v_idealID_HB_query.h  graph_v_of_v_idealID_HB_shortest_distance.h  graph_v_of_v_idealID_HB_v1.h  graph_v_of_v_idealID_HB_v1_for_class.h  graph_v_of_v_idealID_two_hop_labels_v1.h  test_HBPLL.h
CPU_HopHL/include/graph_hash_of_mixed_weighted/: graph_hash_of_mixed_weighted_binary_operations.h
CPU_HopHL/include/graph_v_of_v_idealID/: graph_v_of_v_idaelID_sort.h  graph_v_of_v_idealID.h  graph_v_of_v_idealID_change_new_vertexIDs.h  graph_v_of_v_idealID_to_graph_hash_of_mixed_weighted.h
CPU_HopHL/include/graph_v_of_v_idealID/common_algorithms/: graph_v_of_v_idealID_connected_components.h  graph_v_of_v_idealID_shortest_paths.h
CPU_HopHL/include/graph_v_of_v_idealID/extract_subgraph/: graph_v_of_v_idealID_breadth_first_search_a_set_of_vertices.h  graph_v_of_v_idealID_extract_subgraph.h
CPU_HopHL/include/graph_v_of_v_idealID/random_graph/: graph_v_of_v_idealID_generate_random_connected_graph.h
CPU_HopHL/include/graph_v_of_v_idealID/read_save/: graph_v_of_v_idealID_read.h  graph_v_of_v_idealID_read_for_GSTP.h  graph_v_of_v_idealID_save.h  graph_v_of_v_idealID_save_for_GSTP.h
Clean/: CMakeLists.txt  Readme.md
Clean/include/HBPLL/: gpu_clean.cuh  hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h  test.h
Clean/include/graph_v_of_v/: graph_v_of_v.h  graph_v_of_v_hop_constrained_shortest_distance.h  graph_v_of_v_shortest_paths.h
Clean/include/text_mining/: binary_save_read_vector.h  binary_save_read_vector_of_vectors.h
Clean/src/: cuda_vector.cu  gpu_clean.cu  main.cpp
Clean_mdnd/: Readme.md  main.cu  test.sh
Clean_mdnd/src/: gpu_clean.cu
Clean_pc/: CMakeLists.txt  Readme.md  a.sh  main.cu
Clean_pc/data/: simple_iterative_tests.txt
Clean_pc/src/: cuda_vector.cu  gpu_clean.cu
Distributed_CPU_GPU_Clean/: Readme.md
Distributed_CPU_GPU_Clean/data/: simple_iterative_tests.txt
Distributed_CPU_GPU_Clean/src/: gpu_clean.cu  test.cu
Distributed_CPU_GPU_Generation/: CMakeLists.txt  Readme.md
Distributed_CPU_GPU_Generation/data/: simple_iterative_tests.txt
Distributed_CPU_GPU_Generation/include/HBPLL/: hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h
Distributed_CPU_GPU_Generation/include/definition/: hub_def.h  mmpool_size.h
Distributed_CPU_GPU_Generation/include/graph/: csr_graph.hpp  ldbc.hpp
Distributed_CPU_GPU_Generation/include/graph_v_of_v/: graph_v_of_v_generate_random_graph.h  graph_v_of_v_hop_constrained_shortest_distance.h  graph_v_of_v_update_vertexIDs_by_degrees_large_to_small.h
Distributed_CPU_GPU_Generation/include/label/: gen_label.cuh  global_labels.cuh  global_labels_v2.cuh
Distributed_CPU_GPU_Generation/include/memoryManagement/: cuda_vector_v2.cuh  graph_pool.hpp  mmpool_v2.cuh
Distributed_CPU_GPU_Generation/src/: label_gen.cu  test.cu
GPU4HSDL_EXP/: log5.txt  result_2023www.csv  result_HSDL.csv  result_hybrid.csv  results3.csv  results4.csv  results5.csv
GPU4HSDL_EXP/CPU_HopHL/: CMakeLists.txt  log.txt  log5.txt  loh  run.sh  test.cpp  test_hop.cpp
GPU4HSDL_EXP/CPU_HopHL/Res/: FIG2.csv
GPU4HSDL_EXP/CPU_HopHL/include/HBPLL/: hop_constrained_two_hop_labels.h  hop_constrained_two_hop_labels_generation.h  test.h
GPU4HSDL_EXP/CPU_HopHL/include/graph_v_of_v/: graph_v_of_v.h  graph_v_of_v_hop_constrained_shortest_distance.h
GPU4HSDL_EXP/CPU_HopHL/include/tool_functions/: sorted_vector_binary_operations.h
GPU4HSDL_EXP/Distributed_CPU_GPU_Generation/: CMakeLists.txt  log.txt  run.sh  test.sh
GPU4HSDL_EXP/Hybrid_Generation_Clean/: CMakeLists.txt  log.txt  run.sh
GPU_mdnd/: CMakeLists.txt  Readme.md
GPU_mdnd/GPU_mdnd/: CMakeLists.txt
GPU_mdnd/data/: simple_iterative_tests.txt
GPU_mdnd/src/: label_gen.cu  test.cu  test_mmpool.cu
GPU_pc/CPU_parallel_HopHL/: Readme.md
Hybrid_Generation_Clean/data/: simple_iterative_tests_2023www.txt
Hybrid_Generation_Clean/src/: label_clean.cu  test.cu  (+1 more)
Hybrid_Generation_Clean_EXP/: label_clean.cu  result.csv  result0.csv  result_Hybrid_1CPU_4GPU_data_exp_1.csv  result_Hybrid_1CPU_data_exp_reddit.csv  result_Hybrid_4GPU.csv  result_Hybrid_4GPU_data_exp_1.csv  result_Hybrid_4GPU_data_exp_10.csv  result_Hybrid_4GPU_data_exp_11.csv  result_Hybrid_4GPU_data_exp_12.csv  result_Hybrid_4GPU_data_exp_7.csv  result_Hybrid_4GPU_data_exp_8.csv  result_Hybrid_4GPU_data_exp_9.csv  result_scaling_up.csv  run.sh
Query_mdnd/: CMakeLists.txt  Readme.md  main.cu
Query_mdnd/include/HBPLL/: gpu_query.cuh
Query_mdnd/include/graph_v_of_v/: graph_v_of_v_generate_random_graph.h
Query_mdnd/src/: gpu_query.cu
data/: euroroad2.txt  simple_iterative_tests.txt  wiki-RfA2.txt
data_extra/: Brightkite_edges.e  CA-CondMat.e  dataset.md
(+164 files in other folders)
